<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aliyun_base_color_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/aliyun_base_color_bg"
        android:gravity="center_horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <include layout="@layout/aliyun_svideo_crop_view_action_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="right|center"
                android:text="@string/aliyun_crop_frame_rate"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/aliyun_frame_rate_edit"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/aliyun_crop_shape_rect_gray"
                android:hint="@string/aliyun_frame_rate_hint"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="right|center"
                android:text="@string/aliyun_crop_gop"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/aliyun_gop_edit"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/aliyun_crop_shape_rect_gray"
                android:hint="@string/aliyun_crop_gop_hint"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="right|center"
                android:text="@string/aliyun_kbps"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/aliyun_bitrate_edit"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/aliyun_crop_shape_rect_gray"
                android:hint="@string/aliyun_kbps_hint"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="right|center"
                android:text="@string/aliyun_resolution"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <SeekBar
                android:id="@+id/aliyun_resolution_seekbar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:maxHeight="5dp"
                android:minHeight="5dp"
                android:progress="50"
                android:progressDrawable="@drawable/aliyun_svideo_crop_seekbar_drawable"
                android:thumb="@drawable/aliyun_svideo_crop_seekbar_thum" />

            <TextView
                android:id="@+id/aliyun_resolution_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="222*2222"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="right|center"
                android:text="@string/aliyun_svideo_crop_quality"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <SeekBar
                android:id="@+id/aliyun_quality_seekbar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:maxHeight="5dp"
                android:minHeight="5dp"
                android:progressDrawable="@drawable/aliyun_svideo_crop_seekbar_drawable"
                android:thumb="@drawable/aliyun_svideo_crop_seekbar_thum" />

            <TextView
                android:id="@+id/aliyun_quality_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="222*2222"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="right|center"
                android:text="@string/aliyun_crop_ratio"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <SeekBar
                android:id="@+id/aliyun_ratio_seekbar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:maxHeight="5dp"
                android:minHeight="5dp"
                android:progress="50"
                android:progressDrawable="@drawable/aliyun_svideo_crop_seekbar_drawable"
                android:thumb="@drawable/aliyun_svideo_crop_seekbar_thum" />

            <TextView
                android:id="@+id/aliyun_ratio_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="222*2222"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="right|center"
                android:text="@string/aliyun_crop_mode"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <RadioButton
                    android:id="@+id/aliyun_radio_fill"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:button="@drawable/aliyun_svideo_radio_style"
                    android:paddingLeft="20dp"
                    android:text="@string/aliyun_mode_fill"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/aliyun_radio_crop"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:button="@drawable/aliyun_svideo_radio_style"
                    android:checked="true"
                    android:paddingLeft="20dp"
                    android:text="@string/aliyun_mode_crop"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="right|center"
                android:text="@string/aliyun_use_gpu"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <ToggleButton
                android:id="@+id/tbtn_gpu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="15dp"
            android:paddingLeft="15dp"
            android:text="@string/aliyun_svideo_crop_video_codec"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <RadioButton
                android:id="@+id/alivc_crop_encoder_hardware"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:button="@drawable/aliyun_svideo_radio_style"
                android:paddingLeft="20dp"
                android:text="@string/aliyun_crop_hardware_encoder"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            <RadioButton
                android:id="@+id/alivc_crop_encoder_openh264"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:button="@drawable/aliyun_svideo_radio_style"
                android:checked="true"
                android:paddingLeft="20dp"
                android:text="@string/aliyun_crop_openh264_encoder"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            </FrameLayout>

            <RadioButton
                android:id="@+id/alivc_crop_encoder_ffmpeg"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:button="@drawable/aliyun_svideo_radio_style"
                android:checked="true"
                android:paddingLeft="20dp"
                android:text="@string/aliyun_crop_ffmpeg_encoder"
                android:textColor="@android:color/white"
                android:textSize="14sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/aliyun_start_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/aliyun_crop_seek_bar_theme"
            android:padding="10dp"
            android:text="@string/aliyun_start_import"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/aliyun_upload_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:enabled="true"
            android:focusable="true"
            android:gravity="center"
            android:longClickable="true"
            android:textColor="@android:color/white"
            android:textIsSelectable="true"
            android:textSize="25sp" />
    </LinearLayout>
</ScrollView>
